# fp-rust-book

./: .gitignore  .swp  COPYRIGHT  Cargo.toml  LICENSE  LifetimeNotes.md  README.md  buildBook.sh  gabBook.sh  runexample.sh
docs/: _config.yml  appendix-00.html  appendix-01-keywords.html  appendix-02-operators.html  appendix-03-derivable-traits.html  appendix-04-useful-development-tools.html  appendix-05-editions.html  appendix-06-translation.html  appendix-07-nightly-rust.html  appendix-08-quiz.html  book.js  ch00-00-introduction.html  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-hello-world.html  ch01-03-hello-cargo.html  ch02-00-guessing-game-tutorial.html  ch03-00-common-programming-concepts.html  ch03-01-variables-and-mutability.html  ch03-02-data-types.html  ch03-03-how-functions-work.html  ch03-04-comments.html  ch03-05-control-flow.html  ch04-00-understanding-ownership.html  ch04-01-what-is-ownership.html  ch04-02-references-and-borrowing.html  ch04-03-slices.html  ch05-00-structs.html  ch05-01-defining-structs.html  ch05-02-example-structs.html  ch05-03-method-syntax.html  ch06-00-enums.html  ch06-01-defining-an-enum.html  ch06-02-match.html  ch06-03-if-let.html  ch07-00-managing-growing-projects-with-packages-crates-and-modules.html  ch07-01-packages-and-crates.html  ch07-02-defining-modules-to-control-scope-and-privacy.html  ch07-03-paths-for-referring-to-an-item-in-the-module-tree.html  ch07-04-bringing-paths-into-scope-with-the-use-keyword.html  (+73 more)
docs/css/: general.css
docs/img/: vis_04_01_02_code.html  vis_04_01_03_code.html  vis_04_01_05_code.html  vis_04_01_07_code.html  vis_04_01_09_code.html  vis_04_01_12_code.html  vis_04_02_01_code.html  vis_04_02_03_code.html  vis_04_02_07_code.html  vis_04_02_09_code.html
docs/theme/: 2018-edition.css
example/move_with_no_borrow/: main.rs
example/playground/: play.rs
example/report_eg/: tempCodeRunnerFile
example/simple_lifetime/: example.rs  example2.rs  main.rs
example/simplest/: example.rs
examples/01_move_compound_var/: annotated_source.rs  main.rs
examples/02_clone_compound_var/: annotated_source.rs  main.rs  source.rs
examples/03_copy_scalar_var_TODO/: annotated_source.rs  main.rs  source.rs
examples/04_static_and_dynamic_borrow/: main.rs
examples/05_shadowing_TODO/: main.rs
examples/book_03_01_03_shadowing/: annotated_source.rs  main.rs
examples/book_03_03_09_functions/: annotated_source.rs  main.rs
examples/book_04_01_01_one_var/: annotated_source.rs  main.rs  rendering.html  source.rs
examples/book_04_01_02/: annotated_source.rs  main.rs
examples/book_04_01_02_scope/: annotated_source.rs  main.rs
examples/book_04_01_03_string_from/: annotated_source.rs  main.rs  source.rs
examples/book_04_01_04/: main.rs
examples/book_04_01_04_reference/: annotated_source.rs  main.rs
examples/book_04_01_05/: annotated_source.rs  main.rs
examples/book_04_01_05_scope/: main.rs  source.rs
examples/book_04_01_05_scope2/: annotated_source.rs  main.rs
examples/book_04_01_05_simple_scope/: main.rs
examples/book_04_01_06/: main.rs
examples/book_04_01_06_int_copy/: annotated_source.rs  main.rs
examples/book_04_01_06_move/: main.rs
examples/book_04_01_07_string_move/: annotated_source.rs  main.rs  source.rs
examples/book_04_01_09/: main.rs
examples/book_04_01_09_copy/: main.rs
examples/book_04_01_09_string_clone/: annotated_source.rs  main.rs  source.rs
examples/book_04_01_10_int_copy_2/: annotated_source.rs  main.rs
examples/book_04_01_11/: annotated_source.rs  main.rs
rustBook/: book.toml
src/: data.rs  hover_messages.rs  lib.rs  render.rs
(+81 files in other folders)
