[package]
name = "rrt"
version = "0.1.0"
authors = ["Gabriel Luo <luogm@umich.edu>", "Ke Du <madoka@umich.edu>", "Yingying Zhu <zyy@umich.edu>", "Marcelo Almeida <mgba@umich.edu>"]
edition = "2018"

[lib]
name = "rrt_lib"
path = "src/lib.rs"

[[example]]
name = "shared_and_unique_borrow"  #compile with cargo run --example default
path = "examples/book_04_02_08_shared_and_unique_borrow/main.rs" #Relative path to main.rs of example

[[example]]
name = "one_var"  #compile with cargo run --example default
path = "examples/book_04_01_01_one_var/main.rs" #Relative path to main.rs of example

[[example]]
name = "shadowing"  #compile with cargo run --example default
path = "examples/03_01_03_shadowing/main.rs" #Relative path to main.rs of example

[dependencies]
handlebars = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
# rrt_lib = { path = "./" }
