[package]
name = "rrt"
version = "0.1.0"
authors = ["Gabriel Luo <luogm@umich.edu>", "Ke Du <madoka@umich.edu>", "Yingying Zhu <zyy@umich.edu>", "Marcelo Almeida <mgba@umich.edu>"]
edition = "2018"

[lib]
name = "rrt_lib"
path = "src/lib.rs"

#compile with cargo run --example default
[[example]]
name = "shadowing"
path = "examples/book_03_01_03_shadowing/main.rs"

[[example]]
name = "functions"
path = "examples/book_03_03_09_functions/main.rs"

[[example]]
name = "one_var"
path = "examples/book_04_01_01_one_var/main.rs"

[[example]]
name = "book_04_01_02"
path = "examples/book_04_01_02/main.rs"

[[example]]
name = "book_04_01_04"
path = "examples/book_04_01_04/main.rs"

[[example]]
name = "book_04_01_05"
path = "examples/book_04_01_05/main.rs"

[[example]]
name = "book_04_01_06"
path = "examples/book_04_01_06/main.rs"

[[example]]
name = "book_04_01_09"
path = "examples/book_04_01_09/main.rs"

[[example]]
name = "shared_and_unique_borrow"
path = "examples/book_04_02_09_shared_and_unique_borrow/main.rs"

[dependencies]
handlebars = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
# rrt_lib = { path = "./" }
