[package]
name = "rrt"
version = "0.1.0"
authors = ["Gabriel Luo <luogm@umich.edu>", "Ke Du <madoka@umich.edu>", "Yingying Zhu <zyy@umich.edu>", "Marcelo Almeida <mgba@umich.edu>"]
edition = "2018"

[lib]
name = "rrt_lib"
path = "src/lib.rs"

#compile with cargo run --example default
[[example]]
name = "shadowing"
path = "examples/book_03_01_03_shadowing/main.rs"

[[example]]
name = "functions"
path = "examples/book_03_03_09_functions/main.rs"

[[example]]
name = "one_var"
path = "examples/book_04_01_01_one_var/main.rs"

[[example]]
name = "scope"
path = "examples/book_04_01_02_scope/main.rs"

[[example]]
name = "reference"
path = "examples/book_04_01_04_reference/main.rs"

[[example]]
name = "scope2"
path = "examples/book_04_01_05_scope2/main.rs"

[[example]]
name = "move"
path = "examples/book_04_01_06_move/main.rs"

[[example]]
name = "copy"
path = "examples/book_04_01_09_copy/main.rs"

[[example]]
name = "return_values"
path = "examples/book_04_01_11_return_values/main.rs"

[[example]]
name = "pass_reference"
path = "examples/book_04_02_01_pass_reference/main.rs"

[[example]]
name = "acquire_from_function"
path = "examples/book_04_02_02_acquire_from_function/main.rs"

[[example]]
name = "shared_and_unique_borrow"
path = "examples/book_04_02_09_shared_and_unique_borrow/main.rs"

[[example]]
name = "no_dangle"
path = "examples/book_04_02_12_no_dangle/main.rs"

[dependencies]
handlebars = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
# rrt_lib = { path = "./" }
